# devbox

./: .bashrc  .gitignore  .nixpkgs.json  CHANGELOG.adoc  CHANGELOG.md  Makefile  README.adoc  README.md  Vagrantfile  configuration.nix  docinfo.html  local-configuration.nix  meta.adoc  release.nix  setenv.sh  slides.md  ssh-config  xmonad.hs
doc/: docinfo.html
system/: configuration.nix  local-configuration.nix  setenv.sh
system/pkgs/puppetdb-dns/: deps.nix  dns.conf
user/: config.nix  dotfiles.nix  dotfiles.src  params.sh  setenv.hs  setenv.sh  ssh-config  user-env.cabal
user/config/: ad  box
user/pkgs/cicd-shell/: default.nix
user/pkgs/cicd-shell/share/: .nixpkgs.json  completion.sh  default.nix
user/pkgs/hiera-eyaml-gpg/: Gemfile  gemset.nix
user/pkgs/language-puppet/: default.nix
user/pkgs/puppet-env/: Gemfile  gemset.nix
